# gd

./: .env  .gitignore  .vercel-deploy  README.md  data.db  index.py  package.json  pyproject.toml  requirements.txt  vercel.json
api/admin/: ban.py
api/pay/cryptobot/: webhook.py
backend/: bot.py  config.py  database.py  main.py
public/: app.jsx  index.html  styles.css
webapp/: app.jsx  index.html  styles.css
