[project]
name = "gdz-bot"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "libsql-client>=0.3.0",
    "PyJWT>=2.8.0",
]

[project.scripts]
app = "backend.main:app"
